--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Introduction'
-description: 'Example section for showcasing API endpoints'
+title: "Introduction"
+description: "Example section for showcasing API endpoints"
 ---
 
 <Note>
@@ -23,6 +23,8 @@ There are two ways to build API documentation: [OpenAPI](https://mintlify.com/do
 ## Authentication
 
 All API endpoints are authenticated using Bearer tokens and picked up from the specification file.
+
+## Hello Mint
 
 ```json
 "security": [
