--- a/essentials/code.mdx
+++ b/essentials/code.mdx
@@ -1,22 +1,22 @@
 ---
-title: 'Code Blocks'
-description: 'Display inline code and code blocks'
+title: '代码块'
+description: '显示内联代码和代码块'
 icon: 'code'
 ---
 
-## Basic
+## 基础
 
-### Inline Code
+### 内联代码
 
-To denote a `word` or `phrase` as code, enclose it in backticks (`).
+要将一个`单词`或`短语`标记为代码，请将其用反引号(`)括起来。
 
 ```
-To denote a `word` or `phrase` as code, enclose it in backticks (`).
+要将一个`单词`或`短语`标记为代码，请将其用反引号(`)括起来。
 ```
 
-### Code Block
+### 代码块
 
-Use [fenced code blocks](https://www.markdownguide.org/extended-syntax/#fenced-code-blocks) by enclosing code in three backticks and follow the leading ticks with the programming language of your snippet to get syntax highlighting. Optionally, you can also write the name of your code after the programming language.
+使用[围栏式代码块](https://www.markdownguide.org/extended-syntax/#fenced-code-blocks)，方法是将代码用三个反引号括起来，并在开头的反引号后面标注代码片段的编程语言，以获得语法高亮。您还可以选择在编程语言后面写上代码的名称。
 
 ```java HelloWorld.java
 class HelloWorld {
