--- a/design-system/colors.mdx
+++ b/design-system/colors.mdx
@@ -1,6 +1,7 @@
 ---
 title: 颜色
 description: CSS变量及其工作原理
+icon: 'palette'
 ---
 
 next-forge 使用了 [shadcn/ui](https://ui.shadcn.com/) 提供的 CSS 变量。这是一种很好的方式来抽象化[深色模式](/design-system/dark-mode)和白标化相关的扩展和维护难题。
