--- a/design-system/components.mdx
+++ b/design-system/components.mdx
@@ -1,6 +1,7 @@
 ---
 title: 组件
 description: next-forge 提供了 shadcn/ui 的默认组件库
+icon: 'blocks'
 ---
 
 next-forge 内置了由 [shadcn/ui](https://ui.shadcn.com/) 提供的设计系统。
