--- a/design-system/dark-mode.mdx
+++ b/design-system/dark-mode.mdx
@@ -1,6 +1,7 @@
 ---
 title: 深色模式
 description: 如何在设计系统中使用深色模式
+icon: 'moon'
 ---
 
 next-forge 通过结合 [Tailwind CSS](https://tailwindcss.com/docs/dark-mode) 和 [next-themes](https://github.com/pacocoursey/next-themes) 提供内置的深色模式支持。
