--- a/design-system/provider.mdx
+++ b/design-system/provider.mdx
@@ -1,6 +1,7 @@
 ---
 title: Provider 组件
 description: 一个包装应用程序的全局 Provider
+icon: 'box'
 ---
 
 设计系统包还导出了一个 `DesignSystemProvider` 组件，它实现了许多上下文、功能性和高阶组件，包括工具提示、通知、分析、深色模式等。
