--- a/design-system/typography.mdx
+++ b/design-system/typography.mdx
@@ -1,6 +1,7 @@
 ---
 title: 排版
 description: 自定义字体及其使用方法
+icon: 'text'
 ---
 
 设计系统包包含一个预配置的字体文件，该文件已连接到所有应用程序。这个 `fonts.ts` 文件从 Google Fonts 导入默认字体 Geist，配置适当的子集和 CSS 变量名，然后导出一个你可以在应用程序中使用的 `className`。这个 CSS 变量随后被应用到共享的 Tailwind 配置中。
