修正页面内部id定位错误

--- a/design-system/colors.mdx
+++ b/design-system/colors.mdx
@@ -8,7 +8,7 @@ next-forge 使用了 [shadcn/ui](https://ui.shadcn.com/) 提供的 CSS 变量。
 
 这些颜色也被应用到其他工具中，比如 `AuthProvider`，以确保第三方组件能够尽可能地与应用程序设计保持一致。
 
-## 使用方法
+## 使用方法 {#usage}
 
 所有默认页面和组件都使用这些颜色。你也可以在自己的组件中使用它们，如下所示：
 
@@ -35,7 +35,7 @@ export const MyComponent = () => (
 );
 ```
 
-## 注意事项
+## 注意事项 {#caveats}
 
 目前，无法将 Clerk 主题更改为与应用程序完全匹配的主题。这是因为 Clerk 的主题不接受自定义 CSS 变量。我们希望将来能够添加以下内容：
 
