--- a/design-system/components.mdx
+++ b/design-system/components.mdx
@@ -6,11 +6,11 @@ icon: 'blocks'
 
 next-forge 内置了由 [shadcn/ui](https://ui.shadcn.com/) 提供的设计系统。
 
-## 默认配置 {#default-configuration}
+## 默认配置
 
 shadcn/ui 默认配置使用 "New York" 风格、Tailwind 的 `neutral` 调色板和 CSS 变量。你可以在 `@repo/design-system` 中自定义组件配置，特别是在 `components.json` 文件中。所有组件都已安装并定期更新。
 
-## 更新组件 {#updating-components}
+## 更新组件
 
 要更新 shadcn/ui，请进入设计系统包并使用 `shadcn` CLI：
 
@@ -27,6 +27,6 @@ npx shadcn@latest add --all --overwrite
 `shadcn` CLI 可能会对你的共享 Tailwind 配置文件和全局 CSS 做一些不必要的更改。确保在提交更改之前对其进行审查。
 </Warning>
 
-## 更换库 {#changing-libraries}
+## 更换库 Validating Links
 
 如果你更喜欢其他组件库，你可以随时将其替换为类似的库，比如 Tailwind 的 [Catalyst](https://catalyst.tailwindui.com/)。
