--- a/email/clerk.mdx
+++ b/email/clerk.mdx
@@ -1,10 +1,11 @@
 ---
-title: Authentication Emails
-descriptions: How emails related to authentication and authorization work.
+title: 认证邮件
+description: 与认证和授权相关的邮件如何工作
+icon: lock
 ---
 
-Clerk handles authentication and authorization emails automatically. You can configure the theming of Clerk-sent emails in their dashboard.
+Clerk 自动处理认证和授权邮件。您可以在其仪表板中配置 Clerk 发送的邮件主题。
 
 <Info>
-  Eventually we would like to replace Clerk templates with React Email templates.
+  最终我们希望用 React Email 模板替换 Clerk 模板。
 </Info>
