--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,86 +1,116 @@
 ---
-title: 'Quickstart'
-description: 'Start building awesome documentation in under 5 minutes'
+title: 快速开始
+description: 如何设置 next-forge
+icon: rocket-launch
 ---
 
-## Setup your development
+## 前置条件
 
-Learn how to update your docs locally and deploy them to the public.
+### 操作系统
 
-### Edit and preview
+next-forge 设计为可在 macOS、Linux 和 Windows 上运行。虽然 next-forge 本身是平台无关的，但我们使用的工具和依赖项有不同的要求。我们已经测试并确认 next-forge 可以在以下操作系统和版本组合上运行：
 
-<AccordionGroup>
-  <Accordion icon="github" title="Clone your docs locally">
-    During the onboarding process, we created a repository on your Github with
-    your docs content. You can find this repository on our
-    [dashboard](https://dashboard.mintlify.com). To clone the repository
-    locally, follow these
-    [instructions](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository)
-    in your terminal.
-  </Accordion>
-  <Accordion icon="rectangle-terminal" title="Preview changes">
-    Previewing helps you make sure your changes look as intended. We built a
-    command line interface to render these changes locally. 1. Install the
-    [Mintlify CLI](https://www.npmjs.com/package/mintlify) to preview the
-    documentation changes locally with this command: ``` npm i -g mintlify ```
-    2. Run the following command at the root of your documentation (where
-    `mint.json` is): ``` mintlify dev ```
-  </Accordion>
-</AccordionGroup>
+| 操作系统 | next-forge 版本 | Node.js 版本 | 注意事项 |
+| ---------------- | ----------------- | --------------- | ----- |
+| macOS Sequoia 15.0.1 (24A348) | 2.14.3 | 20.12.2 |  |
+| Ubuntu 24.04 Arm64 | 2.14.3 | 20.18.0 |  |
+| Fedora, Release 41 | 2.14.3 | 22.11.0 |  |
+| Windows 11 Pro 24H2 (26100.2033) | 2.14.3 | 20.18.0 | Turborepo 仅支持特定架构。不支持 `windows ia32`。 |
 
-### Deploy your changes
+我们知道在[非 Ubuntu Linux 发行版](https://github.com/haydenbleasel/next-forge/issues/238)上存在一些问题。虽然我们不正式支持它们，但如果你成功运行了，我们很乐意知道！
 
-<AccordionGroup>
+### pnpm
 
-<Accordion icon="message-bot" title="Install our Github app">
-  Our Github app automatically deploys your changes to your docs site, so you
-  don't need to manage deployments yourself. You can find the link to install on
-  your [dashboard](https://dashboard.mintlify.com). Once the bot has been
-  successfully installed, there should be a check mark next to the commit hash
-  of the repo.
-</Accordion>
-<Accordion icon="rocket" title="Push your changes">
-  [Commit and push your changes to
-  Git](https://docs.github.com/en/get-started/using-git/pushing-commits-to-a-remote-repository#about-git-push)
-  for your changes to update in your docs site. If you push and don't see that
-  the Github app successfully deployed your changes, you can also manually
-  update your docs through our [dashboard](https://dashboard.mintlify.com).
-</Accordion>
+next-forge 默认使用 [pnpm](https://pnpm.io/) 作为包管理器，但你也可以使用 [npm](https://www.npmjs.com/)、[yarn](https://yarnpkg.com/) 或 [bun](https://bun.sh/)。
 
-</AccordionGroup>
+了解如何[安装 pnpm](https://pnpm.io/installation)。
 
-## Update your docs
+### Stripe CLI
 
-Add content directly in your files with MDX syntax and React components. You can use any of our components, or even build your own.
+我们使用 Stripe CLI 将 webhook 转发到你的本地机器。你可以在[这里](/payments)了解更多信息。
 
-<CardGroup>
+了解如何为你的操作系统[安装 Stripe CLI](https://docs.stripe.com/stripe-cli)。
 
-<Card title="Style Your Docs" icon="paintbrush" href="/settings/global">
-  Add flair to your docs with personalized branding.
-</Card>
+### Mintlify CLI
 
-<Card
-  title="Add API Endpoints"
-  icon="square-code"
-  href="/api-playground/configuration"
->
-  Implement your OpenAPI spec and enable API user interaction.
-</Card>
+我们使用 Mintlify CLI 在本地预览文档。你可以使用以下命令安装：
 
-<Card
-  title="Integrate Analytics"
-  icon="chart-mixed"
-  href="/analytics/supported-integrations"
->
-  Draw insights from user interactions with your documentation.
-</Card>
+```sh Terminal
+pnpm add -g @mintlify/cli
+```
 
-<Card
-  title="Host on a Custom Domain"
-  icon="browser"
-  href="/settings/custom-domain/subdomain"
->
-  Keep your docs on your own website's subdomain.
-</Card>
+### 账户
 
-</CardGroup>
+next-forge 依赖于各种 SaaS 产品。你需要在以下服务创建账户，然后在你的[环境变量](/env)中设置 API 密钥：
+
+- [Arcjet](https://arcjet.com)，用于[应用程序安全](/security/application)
+- [BetterStack](https://betterstack.com)，用于[日志记录](/observability/logging)和[正常运行时间监控](/observability/uptime)
+- [Clerk](https://clerk.com)，用于[身份认证](/authentication)
+- [Google Analytics](https://developers.google.com/analytics)，用于[网站分析](/analytics/web)
+- [Posthog](https://posthog.com)，用于[产品分析](/analytics/product)
+- [Resend](https://resend.com)，用于[事务性邮件](/email/resend)
+- [Sentry](https://sentry.io)，用于[错误跟踪](/observability/error-capture)
+- [Stripe](https://stripe.com)，用于[支付](/payments)
+
+## 安装
+
+### 克隆
+
+使用 `next-forge` init 克隆仓库，将 `[my-project]` 替换为你的项目名称。
+
+```sh Terminal
+npx next-forge@latest init [my-project]
+```
+
+这将创建一个新目录，并将仓库克隆到其中。它将运行安装依赖项和复制 `.env` 文件的设置脚本。
+
+### 登录
+
+使用以下命令登录 Stripe：
+
+```sh Terminal
+stripe login
+```
+
+### 环境变量
+
+你应该更改每个 `.env` 或 `.env.local` 文件中的环境变量以匹配你自己的配置，例如：
+
+```js .env.local
+DATABASE_URL="postgres://..."
+```
+
+在[这里](/env)了解更多关于环境变量的信息。
+
+### Vercel 工具栏
+
+进入每个应用程序并运行 `vercel link`，如下所示：
+
+```sh Terminal
+cd apps/app
+vercel link
+```
+
+### 数据库
+
+你需要使用 `packages/database/prisma/schema.prisma` 中定义的架构来搭建数据库：
+
+```sh Terminal
+pnpm migrate
+```
+
+## 开发
+
+使用以下命令运行开发服务器：
+
+```sh Terminal
+pnpm dev
+```
+
+打开带有上述相关端口的 localhost URL 以查看应用程序，例如：
+
+- [http://localhost:3000/](http://localhost:3000/) — 主应用程序
+- [http://localhost:3001/](http://localhost:3001/) — 网站
+- [http://localhost:3002/](http://localhost:3002/) — API
+- [http://localhost:3003/](http://localhost:3003/) — 邮件预览服务器
+- [http://localhost:3004/](http://localhost:3004/) — 文档
