--- a/overview.mdx
+++ b/overview.mdx
@@ -1,35 +1,35 @@
 ---
-title: Overview
+title: 项目概览
 description: next-forge 的概述
 icon: book
 ---
 
-## next-forge 是什么？
+## next-forge 是什么？ / What is next-forge?
 
 next-forge 是一个面向生产级别的 [Turborepo](https://turbo.build/repo) 模板，用于构建 [Next.js](https://nextjs.org/) 应用。它旨在为新应用提供一个全面的起点，通过最少的配置提供一个可靠且有主见的基础。
 
 这是我过去十年构建 Web 应用经验的结晶，旨在帮助你尽快开始构建新的 SaaS 应用。
 
-## Philosophy
+## 理念 / Philosophy
 
 next-forge 专注于以下关键原则：
 
-### Fast
+### 快速 / Fast
 
 你的项目应该是**快速**的。这不仅指构建、运行和部署要快，还意味着验证想法、迭代和扩展都应该快速。这对于创业初期最重要的部分至关重要：找到产品市场契合点、迭代核心理念并扩展到客户。
 
-### Cheap
+### 经济 / Cheap
 
 你的项目应该**经济实惠**，最好是免费起步。在还没有客户之前，你不应该在工具和基础设施上花费太多。它应该避免固定成本，或者有慷慨的免费层级。你应该致力于使项目自给自足，目标是避免前期的任何经常性支出，并找到能随你扩展的服务。
 
-### Opinionated
+### 有主见 / Opinionated
 
 你的项目应该是**有主见**的。这意味着工具应该设计得相互协作，项目也应该设计得能与工具良好配合。这对于减少摩擦和提高生产力很重要。
 
-### Modern
+### 现代 / Modern
 
 你的项目应该是**现代**的。这意味着工具应该得到积极维护，项目应该设计得能够利用最新特性。这对于减少技术债务和增加项目寿命很重要。这并不意味着你应该使用最新或实验性的工具，而是应该使用具有健康社区和长期支持的现代工具的最新稳定版本。
 
-### Safe
+### 安全 / Safe
 
 你的项目应该是**安全**的。实际上，这意味着端到端类型安全、安全地处理密钥，以及使用提供强大安全态势的平台。
