--- a/recommended-libraries/react-wrap-balancer.mdx
+++ b/recommended-libraries/react-wrap-balancer.mdx
@@ -1,9 +1,10 @@
 ---
 title: React Wrap Balancer
-description: A simple React component that makes titles more readable
+description: 使用 React Wrap Balancer 优化文本换行
+icon: text-size
 ---
 
-### Installation
+### 安装 / Installation
 
 To install `react-wrap-balancer`, simply run the following command:
 
@@ -11,7 +12,7 @@ To install `react-wrap-balancer`, simply run the following command:
 pnpm add react-wrap-balancer
 ```
 
-### Usage
+### 基本用法 / Basic Usage
 
 Here is an example of how to use `react-wrap-balancer` to make titles more readable:
 
@@ -21,15 +22,15 @@ import { Balancer } from 'react-wrap-balancer';
 function MyComponent() {
   return (
     <div>
-      <Balancer>This is a title that is too long to fit in one line.</Balancer>
+      <Balancer>这是一个很长的标题，需要优化换行效果以获得更好的视觉体验</Balancer>
     </div>
   );
 }
 ```
 
-### Benefits
+### 优点 / Advantages
 
-- <Icon icon="check" iconType="solid" /> **Improved Readability**: `react-wrap-balancer` makes titles more readable by automatically wrapping them at the appropriate breakpoints.
-- <Icon icon="check" iconType="solid" /> **Easy Integration**: `react-wrap-balancer` is easy to integrate into your existing React application, providing a seamless installation experience.
+- <Icon icon="check" iconType="solid" /> **改善文本视觉效果**: `react-wrap-balancer` 使标题更具可读性，自动在适当的断点处换行。
+- <Icon icon="check" iconType="solid" /> **易于集成**: `react-wrap-balancer` 易于集成到现有的 React 应用程序中，提供无缝的安装体验。
 
 For more information and detailed documentation, visit the [react-wrap-balancer website](https://react-wrap-balancer.vercel.app/).
