--- a/recommended-libraries/zustand.mdx
+++ b/recommended-libraries/zustand.mdx
@@ -1,43 +1,141 @@
 ---
 title: Zustand
-description: A small, fast, and scalable bearbones state-management solution for React applications. It provides a simple and efficient way to manage state in your application.
+description: 使用 Zustand 进行简单而高效的状态管理
+icon: database
 ---
 
-### Installation
+## 什么是 Zustand？ / What is Zustand？
 
-To install Zustand, run the following command:
+[Zustand](https://zustand-demo.pmnd.rs/) 是一个小型、快速且可扩展的状态管理解决方案。它使用简单的 API 提供了 Redux 类似的功能，但没有样板代码。
 
-```sh Terminal
+## 为什么使用它？ / Why Use It?
+
+Zustand 提供了许多优势：
+
+- 极小的包大小
+- 没有样板代码
+- 不需要 Provider
+- 支持 TypeScript
+- 支持中间件
+- 支持 React 之外使用
+
+## 安装 / Installation
+
+```bash
 pnpm add zustand
 ```
 
-### Usage
+## 基本用法 / Basic Usage
 
-Here is an example of how to use Zustand for state management:
+### 创建 Store / Create Store
 
-```tsx counter.tsx
-import create from 'zustand';
+```typescript
+import { create } from 'zustand'
 
-const useStore = create((set) => ({
-  count: 0,
-  increment: () => set((state) => ({ count: state.count + 1 })),
-  decrement: () => set((state) => ({ count: state.count - 1 })),
-}));
+interface BearState {
+  bears: number
+  increase: () => void
+}
 
-function Counter() {
-  const { count, increment, decrement } = useStore();
+const useBearStore = create<BearState>((set) => ({
+  bears: 0,
+  increase: () => set((state) => ({ bears: state.bears + 1 })),
+}))
+```
 
-  return (
-    <div>
-      <h1>{count}</h1>
-      <button onClick={increment}>Increment</button>
-      <button onClick={decrement}>Decrement</button>
-    </div>
-  );
+### 在组件中使用 / Using in Components
+
+```typescript
+function BearCounter() {
+  const bears = useBearStore((state) => state.bears)
+  return <h1>熊的数量：{bears}</h1>
+}
+
+function Controls() {
+  const increase = useBearStore((state) => state.increase)
+  return <button onClick={increase}>添加熊</button>
 }
 ```
 
-In this example, the `create` function from Zustand is used to create a store with a `count` state and `increment` and `decrement` actions. The `useStore` hook is then used in the `Counter` component to access the state and actions.
+## 高级用法 / Advanced Usage
+
+### 中间件 / Middleware
+
+```typescript
+import { persist } from 'zustand/middleware'
+
+const usePersistStore = create(
+  persist(
+    (set) => ({
+      count: 0,
+      increase: () => set((state) => ({ count: state.count + 1 })),
+    }),
+    {
+      name: 'count-storage',
+    }
+  )
+)
+```
+
+### 异步操作 / Async Operations
+
+```typescript
+const useStore = create((set) => ({
+  data: null,
+  loading: false,
+  error: null,
+  fetch: async () => {
+    set({ loading: true })
+    try {
+      const response = await fetch('api/data')
+      const data = await response.json()
+      set({ data, loading: false })
+    } catch (error) {
+      set({ error, loading: false })
+    }
+  }
+}))
+```
+
+## 最佳实践 / Best Practices
+
+1. 保持 store 小而专注
+2. 使用选择器避免不必要的重渲染
+3. 将相关状态和操作组合在一起
+4. 使用中间件扩展功能
+5. 考虑使用 TypeScript 获得更好的类型安全
+
+## 与其他工具集成 / Integration with Other Tools
+
+### 与 React Query 一起使用 / Using with React Query
+
+```typescript
+import { create } from 'zustand'
+import { useQuery } from '@tanstack/react-query'
+
+const useStore = create((set) => ({
+  selectedId: null,
+  setSelectedId: (id) => set({ selectedId: id })
+}))
+
+function Component() {
+  const selectedId = useStore((state) => state.selectedId)
+  const { data } = useQuery(['item', selectedId], () => 
+    fetch(`/api/items/${selectedId}`))
+}
+```
+
+### 开发工具 / Development Tools
+
+Zustand 支持 Redux DevTools，可以帮助调试：
+
+```typescript
+import { devtools } from 'zustand/middleware'
+
+const useStore = create(devtools((set) => ({
+  // 你的 store 逻辑
+})))
+```
 
 ### Benefits
 
